<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concrete_block_perception_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz controls for the concrete block perception test pipeline.</description>
  <maintainer email="gerald.ebmer.fl@ait.ac.at">vscode</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>concrete_block_world_model_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
